# knn

./: CMakeLists.txt  kernel_knn.cu
